# voxel-engine

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: chunk.frag  chunk.vert  outline.frag
src/: Camera.h  Chunk.cpp  Chunk.h  CubeData.h  InputSystem.cpp  InputSystem.h  OutlineRenderer.cpp  OutlineRenderer.h  Physics.cpp  Physics.h  Shader.h  Texture.cpp  Texture.h  VoxelWorld.cpp  VoxelWorld.h  main.cpp
